target/debug/build/erasable-248af93cf7c4ae75/stderr
error[E0658]: extern types are experimental
 --> <anon>:1:37
  |
1 | pub fn probe() { let _ = { extern { type T; } () }; }
  |                                     ^^^^^^^
  |
  = note: see issue #43467 <https://github.com/rust-lang/rust/issues/43467> for more information
  = help: add `#![feature(extern_types)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
error[E0658]: the `!` type is experimental
 --> <anon>:1:18
  |
1 | pub type Probe = !;
  |                  ^
  |
  = note: see issue #35121 <https://github.com/rust-lang/rust/issues/35121> for more information
  = help: add `#![feature(never_type)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
